--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,15 +1,14 @@
 @import "../../assets/scss/config.scss";
 
 .collapse {
-  margin: 30px 0;
+  margin: 10px 0;
+  max-width: 100%;
 
   button {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
-    width: 1023px;
-    height: 47px;
+    padding: 10px;
     font-weight: 500;
     background-color: $primary;
     color: #ffffff;
@@ -30,7 +29,7 @@
 
   .collapse-content {
     font-size: 24px;
-    max-width: 1023px;
+
     width: 100%;
     padding: 20px;
     background-color: #f6f6f6;
@@ -43,37 +42,18 @@
   }
 
   @media #{$BREAKPOINT-TABLETS} {
-    button {
-      width: 600px;
-    }
     .collapse-content {
       font-size: 20px;
-      padding: 15px;
-      width: 600px;
     }
   }
 
   @media #{$BREAKPOINT-MOBILE} {
-   
-      margin: 20px 0;
-  
     button {
       font-size: 13px !important;
-      height: 30px;
-      padding: 5px 10px;
-      width: 335px;
-
-      img {
-        width: 20px;
-        height: 11.47px;
-        margin-left: 5px;
-      }
     }
 
     .collapse-content {
       font-size: 12px !important;
-      width: 335px;
-      padding: 10px;
     }
   }
 }
