--- a/src/views/style/About.css
+++ b/src/views/style/About.css
@@ -14,7 +14,16 @@
   position: relative;
   padding-top: 20px;
 }
+.mainAbout .collapse {
+  width: 1023px;
+}
+@media only screen and (max-width : 480px) {
+  .mainAbout .collapse {
+    width: 335px;
+  }
+}
 .mainAbout button {
+  width: 100%;
   padding-left: 18.8px;
   border-radius: 5px;
   font-size: 24px;
